pipelines/logs/dag_id=test_connection/run_id=scheduled__2023-04-11T00:00:00+00:00/task_id=create_table/attempt=4.log
[2023-04-13T13:08:37.970+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: test_connection.create_table scheduled__2023-04-11T00:00:00+00:00 [queued]>
[2023-04-13T13:08:38.081+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: test_connection.create_table scheduled__2023-04-11T00:00:00+00:00 [queued]>
[2023-04-13T13:08:38.085+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-04-13T13:08:38.088+0000] {taskinstance.py:1289} INFO - Starting attempt 4 of 6
[2023-04-13T13:08:38.092+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-04-13T13:08:38.701+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): create_table> on 2023-04-11 00:00:00+00:00
[2023-04-13T13:08:38.773+0000] {standard_task_runner.py:55} INFO - Started process 2288 to run task
[2023-04-13T13:08:38.833+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'test_connection', 'create_table', 'scheduled__2023-04-11T00:00:00+00:00', '--job-id', '21', '--raw', '--subdir', 'DAGS_FOLDER/test_create_table.py', '--cfg-path', '/tmp/tmpp3ysatbp']
[2023-04-13T13:08:38.861+0000] {standard_task_runner.py:83} INFO - Job 21: Subtask create_table
[2023-04-13T13:08:39.472+0000] {task_command.py:389} INFO - Running <TaskInstance: test_connection.create_table scheduled__2023-04-11T00:00:00+00:00 [running]> on host b030a83adc1d
[2023-04-13T13:08:40.184+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=mlngueko
AIRFLOW_CTX_DAG_ID=test_connection
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-04-11T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=4
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-04-11T00:00:00+00:00
[2023-04-13T13:08:40.195+0000] {sql.py:254} INFO - Executing:  create table if not exists test_tab (
        id integer,
        name character,
        timestamp timestamp,
        primary key id)
        
[2023-04-13T13:08:40.293+0000] {base.py:73} INFO - Using connection ID 'postgres_local' for task execution.
[2023-04-13T13:08:42.435+0000] {base.py:73} INFO - Using connection ID 'postgres_local' for task execution.
[2023-04-13T13:08:43.404+0000] {sql.py:375} INFO - Running statement:  create table if not exists test_tab (
        id integer,
        name character,
        timestamp timestamp,
        primary key id)
        , parameters: None
[2023-04-13T13:08:43.415+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "id"
LINE 5:         primary key id)
                            ^

[2023-04-13T13:08:43.453+0000] {taskinstance.py:1332} INFO - Marking task as UP_FOR_RETRY. dag_id=test_connection, task_id=create_table, execution_date=20230411T000000, start_date=20230413T130837, end_date=20230413T130843
[2023-04-13T13:08:43.783+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 21 for task create_table (syntax error at or near "id"
LINE 5:         primary key id)
                            ^
; 2288)
[2023-04-13T13:08:43.969+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-13T13:08:44.027+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
